--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 p {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Papyrus;
 }
 
 h1 {
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
 }
