--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 p {
-    font-family: Papyrus;
+    font-family: 'Times New Roman', Times, serif
 }
 
 h1 {
 
-    font-family: Arial;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
